# gulc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cppcheck_report.txt
.github/workflows/: cmake-multi-platform.yml  cppcheck.yml
include/gulc/: gulc_common.h  gulc_memory.h  gulc_test.h  gulc_vector.h  gulc_verify.h
src/: CMakeLists.txt
src/gulc/: gulc_memory.c  gulc_test.c  gulc_vector.c  gulc_verify.c
tests/: CMakeLists.txt  test_memory.c  test_test.c  test_vector.c
