cmake_minimum_required(VERSION 3.10)

project(gulc LANGUAGES C)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR})
    set(GULC_STANDALONE ON)
else()
    set(GULC_STANDALONE OFF)
endif()

option(GULC_BUILD_TESTS "Build gulc tests" ${GULC_STANDALONE})

message(STATUS "CMake compiler id (version): ${CMAKE_C_COMPILER_ID} (${CMAKE_C_COMPILER_VERSION})")
message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
message(STATUS "GULC_STANDALONE: ${GULC_STANDALONE}")
message(STATUS "GULC_BUILD_TESTS: ${GULC_BUILD_TESTS}")

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CMAKE_BUILD_TYPE} ${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CMAKE_BUILD_TYPE} ${CMAKE_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})

add_subdirectory(src)

if(GULC_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()